z-index fixed

--- a/assets/sass/sina-nav.scss
+++ b/assets/sass/sina-nav.scss
@@ -133,7 +133,7 @@ $animateTime: 1s;
 	margin-bottom: 0;
 	border-radius: 0;
 	min-height: 60px;
-	z-index: 999999;
+	z-index: 9999;
 	left: 0;
 	right: 0;
 	background: $navBG;
